fixed horizontal scroll

--- a/style.css
+++ b/style.css
@@ -407,7 +407,7 @@ main {
 .studio-decor__video {
 	max-width: 1440px;
 	min-width: 375px;
-	width: 100vw;
+	width: 100%;
 	height: calc(100vw / 2);
 	max-height: 800px;
 }
